--- a/model_training.yaml
+++ b/model_training.yaml
@@ -366,8 +366,8 @@ implementation:
             if algorithm_name not in ALGORITHM_REGISTRY:
                 available = ', '.join(ALGORITHM_REGISTRY.keys())
                 raise ValueError(
-                    f"Unknown algorithm: {algorithm_name}\n"
-                    f"Available algorithms: {available}"
+                    f'Unknown algorithm: {algorithm_name}\n"
+                    f'Available algorithms: {available}"
                 )
             
             config = ALGORITHM_REGISTRY[algorithm_name]
@@ -392,8 +392,8 @@ implementation:
                     }
                     package_name = package_map.get(module_name.split('.')[0], module_name.split('.')[0])
                     raise ImportError(
-                        f"\n{algorithm_name} requires additional package: {package_name}\n"
-                        f"Install with: pip install {package_name}"
+                        f'\n{algorithm_name} requires additional package: {package_name}\n"
+                        f'Install with: pip install {package_name}"
                     ) from e
                 raise
         
@@ -403,14 +403,14 @@ implementation:
             # Returns: dict with tuned parameters
             params = default_params.copy()
             
-            print(f"\nAuto-tuning parameters for {algorithm_name}...")
-            print(f"Data shape: {n_samples} samples x {n_features} features")
+            print(f'\nAuto-tuning parameters for {algorithm_name}...")
+            print(f'Data shape: {n_samples} samples x {n_features} features")
             
             if algorithm_name in ['KMeans', 'MiniBatchKMeans', 'BisectingKMeans', 'KMedoids']:
                 # Heuristic: sqrt(n_samples/2)
                 suggested_k = max(2, min(int(np.sqrt(n_samples / 2)), 50))
                 params['n_clusters'] = suggested_k
-                print(f"Auto-tuned n_clusters: {suggested_k}")
+                print(f'Auto-tuned n_clusters: {suggested_k}")
                 
             elif algorithm_name == 'DBSCAN':
                 # Heuristic: eps based on feature count
@@ -418,14 +418,14 @@ implementation:
                 suggested_min_samples = max(3, min(2 * n_features, 50))
                 params['eps'] = suggested_eps
                 params['min_samples'] = suggested_min_samples
-                print(f"Auto-tuned eps: {suggested_eps:.3f}")
-                print(f"Auto-tuned min_samples: {suggested_min_samples}")
+                print(f'Auto-tuned eps: {suggested_eps:.3f}")
+                print(f'Auto-tuned min_samples: {suggested_min_samples}")
                 
             elif algorithm_name == 'HDBSCAN':
                 # Heuristic: min_cluster_size as 1% of data
                 suggested_size = max(5, int(n_samples * 0.01))
                 params['min_cluster_size'] = suggested_size
-                print(f"Auto-tuned min_cluster_size: {suggested_size}")
+                print(f'Auto-tuned min_cluster_size: {suggested_size}")
                 
             elif algorithm_name in ['GaussianMixture', 'BayesianGaussianMixture']:
                 # Heuristic: fewer components for high-dimensional data
@@ -434,25 +434,25 @@ implementation:
                 else:
                     suggested_comp = max(2, min(10, int(np.sqrt(n_samples / 10))))
                 params['n_components'] = suggested_comp
-                print(f"Auto-tuned n_components: {suggested_comp}")
+                print(f'Auto-tuned n_components: {suggested_comp}")
             
             elif algorithm_name == 'FuzzyCMeans':
                 suggested_c = max(2, min(int(np.sqrt(n_samples / 2)), 20))
                 params['c'] = suggested_c
-                print(f"Auto-tuned c (clusters): {suggested_c}")
+                print(f'Auto-tuned c (clusters): {suggested_c}")
             
             elif algorithm_name == 'SpectralClustering':
                 suggested_k = max(2, min(int(np.sqrt(n_samples / 2)), 30))
                 suggested_neighbors = max(5, min(int(np.log(n_samples)), 20))
                 params['n_clusters'] = suggested_k
                 params['n_neighbors'] = suggested_neighbors
-                print(f"Auto-tuned n_clusters: {suggested_k}")
-                print(f"Auto-tuned n_neighbors: {suggested_neighbors}")
+                print(f'Auto-tuned n_clusters: {suggested_k}")
+                print(f'Auto-tuned n_neighbors: {suggested_neighbors}")
             
             elif algorithm_name == 'AgglomerativeClustering':
                 suggested_k = max(2, min(int(np.sqrt(n_samples / 2)), 30))
                 params['n_clusters'] = suggested_k
-                print(f"Auto-tuned n_clusters: {suggested_k}")
+                print(f'Auto-tuned n_clusters: {suggested_k}")
             
             return params
         
@@ -460,9 +460,9 @@ implementation:
         def train_model(X_train, algorithm_name, parameters, training_mode='auto'):
             # Train clustering model
             # Returns: tuple (model, train_labels, config)
-            print(f"\nTraining {algorithm_name}...")
-            print(f"Data shape: {X_train.shape}")
-            print(f"Training mode: {training_mode}")
+            print(f'\nTraining {algorithm_name}...")
+            print(f'Data shape: {X_train.shape}")
+            print(f'Training mode: {training_mode}")
             
             # Load algorithm
             AlgorithmClass, config = load_algorithm_class(algorithm_name)
@@ -470,11 +470,11 @@ implementation:
             # Determine training mode
             if training_mode == 'auto':
                 training_mode = config['preferred_training']
-                print(f"Auto-selected mode: {training_mode}")
+                print(f'Auto-selected mode: {training_mode}")
             
             # Train based on mode
             if training_mode == 'fit':
-                print(f"Training with fit()...")
+                print(f'Training with fit()...")
                 model = AlgorithmClass(**parameters)
                 model.fit(X_train)
                 
@@ -486,12 +486,12 @@ implementation:
                     train_labels = model.predict(X_train)
             
             elif training_mode == 'fit_predict':
-                print(f"Training with fit_predict()...")
+                print(f'Training with fit_predict()...")
                 model = AlgorithmClass(**parameters)
                 train_labels = model.fit_predict(X_train)
             
             elif training_mode == 'function_call':
-                print(f"Training with functional API...")
+                print(f'Training with functional API...")
                 # Handle Fuzzy C-Means
                 if algorithm_name == 'FuzzyCMeans':
                     import skfuzzy as fuzz
@@ -509,27 +509,27 @@ implementation:
                         'algorithm': 'FuzzyCMeans'
                     }
                 else:
-                    raise ValueError(f"function_call not supported for {algorithm_name}")
+                    raise ValueError(f'function_call not supported for {algorithm_name}")
             else:
-                raise ValueError(f"Unknown training_mode: {training_mode}")
+                raise ValueError(f'Unknown training_mode: {training_mode}")
             
             # Analyze results
             unique_labels = np.unique(train_labels)
             n_clusters = len(unique_labels[unique_labels != -1])
             n_noise = np.sum(train_labels == -1)
             
-            print(f"\nTraining Results:")
-            print(f"Clusters found: {n_clusters}")
+            print(f'\nTraining Results:")
+            print(f'Clusters found: {n_clusters}")
             
             if n_noise > 0:
-                print(f"Noise points: {n_noise} ({n_noise/len(train_labels)*100:.1f}%)")
+                print(f'Noise points: {n_noise} ({n_noise/len(train_labels)*100:.1f}%)")
             
-            print(f"\nCluster distribution:")
+            print(f'\nCluster distribution:")
             for label in sorted(unique_labels):
                 count = np.sum(train_labels == label)
                 pct = count / len(train_labels) * 100
-                label_name = "Noise" if label == -1 else f"Cluster {label}"
-                print(f"  {label_name}: {count:>5} samples ({pct:>5.1f}%)")
+                label_name = "Noise" if label == -1 else f'Cluster {label}"
+                print(f'  {label_name}: {count:>5} samples ({pct:>5.1f}%)")
             
             return model, train_labels, config
         
@@ -537,7 +537,7 @@ implementation:
         def save_outputs(model, train_labels, X_train, config, parameters, algorithm_name, 
                         model_path, labels_path, train_data_path, metadata_path):
             # Save model and training results
-            print(f"\nSaving outputs...")
+            print(f'\nSaving outputs...")
             
             # Ensure directories exist
             for path in [model_path, labels_path, train_data_path, metadata_path]:
@@ -547,15 +547,15 @@ implementation:
             with open(model_path, 'wb') as f:
                 pickle.dump(model, f)
             model_size = os.path.getsize(model_path) / 1024
-            print(f"Model saved: {model_path} ({model_size:.2f} KB)")
+            print(f'Model saved: {model_path} ({model_size:.2f} KB)")
             
             # Save training labels
             np.save(labels_path, train_labels)
-            print(f"Labels saved: {labels_path}")
+            print(f'Labels saved: {labels_path}")
             
             # Save training data reference (for inference)
             np.save(train_data_path, X_train)
-            print(f"Train data saved: {train_data_path}")
+            print(f'Train data saved: {train_data_path}")
             
             # Create metadata
             unique_labels = np.unique(train_labels)
@@ -588,7 +588,7 @@ implementation:
             # Save metadata
             with open(metadata_path, 'w') as f:
                 json.dump(metadata, f, indent=2)
-            print(f"Metadata saved: {metadata_path}")
+            print(f'Metadata saved: {metadata_path}")
             
             return metadata
         
@@ -628,7 +628,7 @@ implementation:
                 print("="*80)
                 
                 # Load training data
-                print(f"\nLoading training data from: {args.train_data}")
+                print(f'\nLoading training data from: {args.train_data}")
                 
                 if args.train_data.endswith('.csv'):
                     df = pd.read_csv(args.train_data)
@@ -638,39 +638,39 @@ implementation:
                 else:
                     raise ValueError("Unsupported file format. Use .csv or .npy")
                 
-                print(f"Loaded successfully")
-                print(f"Shape: {X_train.shape[0]} samples x {X_train.shape[1]} features")
+                print(f'Loaded successfully")
+                print(f'Shape: {X_train.shape[0]} samples x {X_train.shape[1]} features")
                 
                 # Validate data
                 if X_train.shape[0] < 2:
-                    raise ValueError(f"Need at least 2 samples, got {X_train.shape[0]}")
+                    raise ValueError(f'Need at least 2 samples, got {X_train.shape[0]}")
                 
                 if X_train.shape[1] < 1:
-                    raise ValueError(f"Need at least 1 feature, got {X_train.shape[1]}")
+                    raise ValueError(f'Need at least 1 feature, got {X_train.shape[1]}")
                 
                 if not np.isfinite(X_train).all():
                     n_invalid = (~np.isfinite(X_train)).sum()
-                    raise ValueError(f"Data contains {n_invalid} NaN/Inf values")
+                    raise ValueError(f'Data contains {n_invalid} NaN/Inf values")
                 
                 # Get algorithm configuration
                 if args.algorithm not in ALGORITHM_REGISTRY:
                     available = ', '.join(ALGORITHM_REGISTRY.keys())
                     raise ValueError(
-                        f"Unknown algorithm: {args.algorithm}\n"
-                        f"Available: {available}"
+                        f'Unknown algorithm: {args.algorithm}\n"
+                        f'Available: {available}"
                     )
                 
                 config = ALGORITHM_REGISTRY[args.algorithm]
                 
-                print(f"\nAlgorithm: {args.algorithm}")
-                print(f"Category: {config['category']}")
-                print(f"Training method: {config['preferred_training']}")
+                print(f'\nAlgorithm: {args.algorithm}")
+                print(f'Category: {config['category']}")
+                print(f'Training method: {config['preferred_training']}")
                 
                 # Prepare parameters
                 parameters = config['default_params'].copy()
                 
-                print(f"\nConfiguring parameters...")
-                print(f"Starting with defaults for {args.algorithm}")
+                print(f'\nConfiguring parameters...")
+                print(f'Starting with defaults for {args.algorithm}")
                 
                 # Auto-tune if requested
                 if args.auto_tune.lower() == 'true':
@@ -685,20 +685,20 @@ implementation:
                 if args.params and args.params != '{}':
                     try:
                         user_params = json.loads(args.params)
-                        print(f"\nApplying {len(user_params)} user parameters:")
+                        print(f'\nApplying {len(user_params)} user parameters:")
                         for key, value in user_params.items():
                             if key in parameters:
                                 old_value = parameters[key]
                                 parameters[key] = value
-                                print(f"  {key}: {old_value} -> {value}")
+                                print(f'  {key}: {old_value} -> {value}")
                             else:
-                                print(f"  Unknown parameter: {key} (ignored)")
+                                print(f'  Unknown parameter: {key} (ignored)")
                     except json.JSONDecodeError as e:
-                        raise ValueError(f"Invalid JSON in params: {e}")
+                        raise ValueError(f'Invalid JSON in params: {e}")
                 
-                print(f"\nFinal parameters:")
+                print(f'\nFinal parameters:")
                 for key, value in parameters.items():
-                    print(f"  {key}: {value}")
+                    print(f'  {key}: {value}")
                 
                 # Train model
                 model, train_labels, config = train_model(
@@ -723,30 +723,30 @@ implementation:
                 )
                 
                 # Final summary
-                print(f"\n" + "="*80)
+                print(f'\n" + "="*80)
                 print("TRAINING COMPLETED SUCCESSFULLY")
                 print("="*80)
-                print(f"\nSummary:")
-                print(f"  Algorithm: {args.algorithm}")
-                print(f"  Category: {config['category']}")
-                print(f"  Training samples: {X_train.shape[0]}")
-                print(f"  Features: {X_train.shape[1]}")
-                print(f"  Clusters found: {metadata['training_results']['n_clusters']}")
+                print(f'\nSummary:")
+                print(f'  Algorithm: {args.algorithm}")
+                print(f'  Category: {config['category']}")
+                print(f'  Training samples: {X_train.shape[0]}")
+                print(f'  Features: {X_train.shape[1]}")
+                print(f'  Clusters found: {metadata['training_results']['n_clusters']}")
                 
                 if metadata['training_results']['n_noise'] > 0:
-                    print(f"  Noise points: {metadata['training_results']['n_noise']} "
-                          f"({metadata['training_results']['noise_percentage']:.1f}%)")
+                    print(f'  Noise points: {metadata['training_results']['n_noise']} "
+                          f'({metadata['training_results']['noise_percentage']:.1f}%)")
                 
-                print(f"\nOutput files created:")
-                print(f"  Model: {args.output_model}")
-                print(f"  Labels: {args.output_train_labels}")
-                print(f"  Train data ref: {args.output_train_data_ref}")
-                print(f"  Metadata: {args.output_metadata}")
+                print(f'\nOutput files created:")
+                print(f'  Model: {args.output_model}")
+                print(f'  Labels: {args.output_train_labels}")
+                print(f'  Train data ref: {args.output_train_data_ref}")
+                print(f'  Metadata: {args.output_metadata}")
                 
                 print("="*80 + "\n")
                 
             except Exception as e:
-                print(f"\nERROR: {str(e)}")
+                print(f'\nERROR: {str(e)}")
                 import traceback
                 traceback.print_exc()
                 sys.exit(1)
