--- a/validation_model.yaml
+++ b/validation_model.yaml
@@ -77,7 +77,7 @@ implementation:
                     recommendation = "Model is ready for production deployment"
                 else:
                     print("VALIDATION GATE: REJECTED - QUALITY ISSUES DETECTED")
-                    decision_reason = f"Failed {len(self.failed_checks)} checks"
+                    decision_reason = f'Failed {len(self.failed_checks)} checks"
                     recommendation = "Retrain model with different parameters or algorithm"
                 print("="*80)
                 
@@ -126,20 +126,20 @@ implementation:
                 
                 if not passed:
                     if value is not None:
-                        self.failed_checks.append(f"{metric_name}: {value:.3f} < {threshold}")
+                        self.failed_checks.append(f'{metric_name}: {value:.3f} < {threshold}")
                     else:
-                        self.failed_checks.append(f"{metric_name}: Missing")
+                        self.failed_checks.append(f'{metric_name}: Missing")
                 
                 # Print check result
-                print(f"\nCheck 1: {metric_name}")
+                print(f'\nCheck 1: {metric_name}")
                 if value is not None:
-                    print(f"  Value: {value:.4f}")
+                    print(f'  Value: {value:.4f}")
                 else:
-                    print(f"  Value: N/A")
-                print(f"  Threshold: >= {threshold}")
-                print(f"  Status: {status}")
+                    print(f'  Value: N/A")
+                print(f'  Threshold: >= {threshold}")
+                print(f'  Status: {status}")
                 if not passed and value is not None:
-                    print(f"  Warning: Quality too low for production!")
+                    print(f'  Warning: Quality too low for production!")
             
             def _check_separation_ratio(self, metrics: Dict[str, Any]):
                 # Check separation ratio (higher is better)
@@ -170,20 +170,20 @@ implementation:
                 
                 if not passed:
                     if value is not None:
-                        self.failed_checks.append(f"{metric_name}: {value:.3f} < {threshold}")
+                        self.failed_checks.append(f'{metric_name}: {value:.3f} < {threshold}")
                     else:
-                        self.failed_checks.append(f"{metric_name}: Missing")
+                        self.failed_checks.append(f'{metric_name}: Missing")
                 
                 # Print check result
-                print(f"\nCheck 2: {metric_name}")
+                print(f'\nCheck 2: {metric_name}")
                 if value is not None:
-                    print(f"  Value: {value:.4f}")
+                    print(f'  Value: {value:.4f}")
                 else:
-                    print(f"  Value: N/A")
-                print(f"  Threshold: >= {threshold}")
-                print(f"  Status: {status}")
+                    print(f'  Value: N/A")
+                print(f'  Threshold: >= {threshold}")
+                print(f'  Status: {status}")
                 if not passed and value is not None:
-                    print(f"  Warning: Clusters not well separated!")
+                    print(f'  Warning: Clusters not well separated!")
             
             def _check_davies_bouldin(self, metrics: Dict[str, Any]):
                 # Check Davies-Bouldin index (lower is better)
@@ -214,20 +214,20 @@ implementation:
                 
                 if not passed:
                     if value is not None:
-                        self.failed_checks.append(f"{metric_name}: {value:.3f} > {threshold}")
+                        self.failed_checks.append(f'{metric_name}: {value:.3f} > {threshold}")
                     else:
-                        self.failed_checks.append(f"{metric_name}: Missing")
+                        self.failed_checks.append(f'{metric_name}: Missing")
                 
                 # Print check result
-                print(f"\nCheck 3: {metric_name}")
+                print(f'\nCheck 3: {metric_name}")
                 if value is not None:
-                    print(f"  Value: {value:.4f}")
+                    print(f'  Value: {value:.4f}")
                 else:
-                    print(f"  Value: N/A")
-                print(f"  Threshold: <= {threshold}")
-                print(f"  Status: {status}")
+                    print(f'  Value: N/A")
+                print(f'  Threshold: <= {threshold}")
+                print(f'  Status: {status}")
                 if not passed and value is not None:
-                    print(f"  Warning: Clusters overlap too much!")
+                    print(f'  Warning: Clusters overlap too much!")
             
             def _check_cluster_sizes(self, metrics: Dict[str, Any]):
                 # Check minimum cluster size
@@ -260,20 +260,20 @@ implementation:
                 
                 if not passed:
                     if value is not None:
-                        self.failed_checks.append(f"{metric_name}: {value} < {threshold}")
+                        self.failed_checks.append(f'{metric_name}: {value} < {threshold}")
                     else:
-                        self.failed_checks.append(f"{metric_name}: Missing")
+                        self.failed_checks.append(f'{metric_name}: Missing")
                 
                 # Print check result
-                print(f"\nCheck 4: {metric_name}")
+                print(f'\nCheck 4: {metric_name}")
                 if value is not None:
-                    print(f"  Value: {value}")
+                    print(f'  Value: {value}")
                 else:
-                    print(f"  Value: N/A")
-                print(f"  Threshold: >= {threshold}")
-                print(f"  Status: {status}")
+                    print(f'  Value: N/A")
+                print(f'  Threshold: >= {threshold}")
+                print(f'  Status: {status}")
                 if not passed and value is not None:
-                    print(f"  Warning: Cluster too small - may not be meaningful!")
+                    print(f'  Warning: Cluster too small - may not be meaningful!")
             
             def _check_noise_percentage(self, metrics: Dict[str, Any]):
                 # Check noise percentage (for density-based algorithms)
@@ -299,28 +299,28 @@ implementation:
                 self.checks.append(check)
                 
                 if not passed:
-                    self.failed_checks.append(f"{metric_name}: {value:.1f}% > {threshold}%")
+                    self.failed_checks.append(f'{metric_name}: {value:.1f}% > {threshold}%")
                 
                 # Print check result
-                print(f"\nCheck 5: {metric_name}")
-                print(f"  Value: {value:.2f}%")
-                print(f"  Threshold: <= {threshold}%")
-                print(f"  Status: {status}")
+                print(f'\nCheck 5: {metric_name}")
+                print(f'  Value: {value:.2f}%")
+                print(f'  Threshold: <= {threshold}%")
+                print(f'  Status: {status}")
                 if not passed:
-                    print(f"  Warning: Too many noise points!")
+                    print(f'  Warning: Too many noise points!")
         
         
         def load_evaluation_results(filepath: str) -> Dict[str, Any]:
             # Load evaluation results from JSON file
-            print(f"\nLoading evaluation results from: {filepath}")
+            print(f'\nLoading evaluation results from: {filepath}")
             
             if not os.path.exists(filepath):
-                raise FileNotFoundError(f"Evaluation results not found: {filepath}")
+                raise FileNotFoundError(f'Evaluation results not found: {filepath}")
             
             with open(filepath, 'r') as f:
                 results = json.load(f)
             
-            print(f"Loaded successfully")
+            print(f'Loaded successfully")
             return results
         
         
@@ -340,24 +340,24 @@ implementation:
             try:
                 if thresholds_json and thresholds_json.strip() and thresholds_json != '{}':
                     custom_thresholds = json.loads(thresholds_json)
-                    print(f"\nCustom thresholds provided:")
+                    print(f'\nCustom thresholds provided:")
                     for key, value in custom_thresholds.items():
-                        print(f"  {key}: {value}")
+                        print(f'  {key}: {value}")
                     
                     # Merge with defaults (custom overrides defaults)
                     thresholds = {**default_thresholds, **custom_thresholds}
                 else:
-                    print(f"\nUsing default thresholds")
+                    print(f'\nUsing default thresholds")
                     thresholds = default_thresholds
             except json.JSONDecodeError as e:
-                print(f"\nWarning: Invalid JSON in thresholds, using defaults")
-                print(f"Error: {e}")
+                print(f'\nWarning: Invalid JSON in thresholds, using defaults")
+                print(f'Error: {e}")
                 thresholds = default_thresholds
             
             # Print final thresholds
             print("\nQuality Thresholds:")
             for key, value in thresholds.items():
-                print(f"  {key}: {value}")
+                print(f'  {key}: {value}")
             
             return thresholds
         
@@ -373,15 +373,15 @@ implementation:
             
             file_size = os.path.getsize(output_path) / 1024
             
-            print(f"\nValidation result saved:")
-            print(f"  File: {output_path}")
-            print(f"  Size: {file_size:.2f} KB")
+            print(f'\nValidation result saved:")
+            print(f'  File: {output_path}")
+            print(f'  Size: {file_size:.2f} KB")
             
             # Save simple flag file
             with open(flag_path, 'w') as f:
                 f.write(str(result['deploy_approved']).lower())
             
-            print(f"  Flag: {flag_path} -> {result['deploy_approved']}")
+            print(f'  Flag: {flag_path} -> {result['deploy_approved']}")
         
         
         def print_summary(result: Dict[str, Any]):
@@ -390,17 +390,17 @@ implementation:
             print("VALIDATION SUMMARY")
             print("="*80)
             
-            print(f"\nChecks Passed: {result['checks_passed']}/{result['checks_total']}")
-            print(f"Deploy Approved: {'YES' if result['deploy_approved'] else 'NO'}")
-            print(f"Decision: {result['decision_reason']}")
+            print(f'\nChecks Passed: {result['checks_passed']}/{result['checks_total']}")
+            print(f'Deploy Approved: {'YES' if result['deploy_approved'] else 'NO'}")
+            print(f'Decision: {result['decision_reason']}")
             
             if result['failed_checks']:
-                print(f"\nFailed Checks:")
+                print(f'\nFailed Checks:")
                 for check in result['failed_checks']:
-                    print(f"  - {check}")
+                    print(f'  - {check}")
             
-            print(f"\nRecommendation:")
-            print(f"  {result['recommendation']}")
+            print(f'\nRecommendation:")
+            print(f'  {result['recommendation']}")
             
             print("="*80)
         
@@ -458,7 +458,7 @@ implementation:
                 print("="*80 + "\n")
                 
             except Exception as e:
-                print(f"\nERROR: {str(e)}")
+                print(f'\nERROR: {str(e)}")
                 import traceback
                 traceback.print_exc()
                 # Don't exit with error code - just mark as not approved
