--- a/CDN_Download.yaml
+++ b/CDN_Download.yaml
@@ -76,21 +76,21 @@ implementation:
         
         def download_file(cdn_url, output_path, file_description, is_binary=False):
             # Download a single file from CDN
-            print(f'Downloading {file_description}...")
-            print(f'  CDN URL: {cdn_url}")
+            print(f'Downloading {file_description}...')
+            print(f'  CDN URL: {cdn_url}')
             
             # Fix URL encoding
             fixed_url = fix_url_encoding(cdn_url)
             
             try:
                 # Download file
-                print(f'  Fetching from CDN...")
+                print(f'  Fetching from CDN...')
                 response = requests.get(fixed_url, timeout=60)
                 response.raise_for_status()
                 
                 # Get file size
                 file_size = len(response.content)
-                print(f'  Downloaded: {file_size:,} bytes ({file_size/1024:.2f} KB)")
+                print(f'  Downloaded: {file_size:,} bytes ({file_size/1024:.2f} KB)')
                 
                 # Ensure output directory exists
                 os.makedirs(os.path.dirname(output_path), exist_ok=True)
@@ -104,8 +104,8 @@ implementation:
                     with open(output_path, mode) as f:
                         f.write(response.text)
                 
-                print(f'  Saved to: {output_path}")
-                print(f'  Status: Success")
+                print(f'  Saved to: {output_path}')
+                print(f'  Status: Success')
                 print("")
                 
                 return {
@@ -117,10 +117,10 @@ implementation:
                 }
             
             except requests.exceptions.RequestException as e:
-                print(f'  Status: Failed")
-                print(f'  Error: {str(e)}")
+                print(f'  Status: Failed')
+                print(f'  Error: {str(e)}')
                 print("")
-                raise RuntimeError(f'Failed to download {file_description}: {str(e)}")
+                raise RuntimeError(f'Failed to download {file_description}: {str(e)}')
         
         # Download all three files
         download_results = {}
@@ -157,14 +157,14 @@ implementation:
             try:
                 import numpy as np
                 gt_data = np.load(args.output_test_ground_truth, allow_pickle=False)
-                print(f'NPY file verification:")
-                print(f'  Shape: {gt_data.shape}")
-                print(f'  Data type: {gt_data.dtype}")
-                print(f'  Min value: {gt_data.min()}")
-                print(f'  Max value: {gt_data.max()}")
+                print(f'NPY file verification:')
+                print(f'  Shape: {gt_data.shape}')
+                print(f'  Data type: {gt_data.dtype}')
+                print(f'  Min value: {gt_data.min()}')
+                print(f'  Max value: {gt_data.max()}')
                 print("")
             except Exception as e:
-                print(f'Warning: Could not verify NPY file: {str(e)}")
+                print(f'Warning: Could not verify NPY file: {str(e)}')
                 print("")
             
             # Create download summary
@@ -185,11 +185,11 @@ implementation:
             print("="*80)
             print("CDN DOWNLOAD COMPLETED SUCCESSFULLY")
             print("="*80)
-            print(f'Files downloaded: 3")
-            print(f'Total size: {summary['total_size_kb']:.2f} KB")
-            print(f'Training data: {args.output_train_data}")
-            print(f'Test data: {args.output_test_data}")
-            print(f'Test ground truth: {args.output_test_ground_truth}")
+            print(f'Files downloaded: 3')
+            print(f'Total size: {summary['total_size_kb']:.2f} KB')
+            print(f'Training data: {args.output_train_data}')
+            print(f'Test data: {args.output_test_data}')
+            print(f'Test ground truth: {args.output_test_ground_truth}')
             print("="*80)
             
         except Exception as e:
@@ -197,7 +197,7 @@ implementation:
             print("="*80)
             print("CDN DOWNLOAD FAILED")
             print("="*80)
-            print(f'Error: {str(e)}")
+            print(f'Error: {str(e)}')
             print("="*80)
             
             # Create error summary
