--- a/model_training.yaml
+++ b/model_training.yaml
@@ -366,8 +366,8 @@ implementation:
             if algorithm_name not in ALGORITHM_REGISTRY:
                 available = ', '.join(ALGORITHM_REGISTRY.keys())
                 raise ValueError(
-                    f'Unknown algorithm: {algorithm_name}\n' +
-                    f'Available algorithms: {available}'
+                    (f'Unknown algorithm: {algorithm_name}\n'
+                     f'Available algorithms: {available}')
                 )
             
             config = ALGORITHM_REGISTRY[algorithm_name]
@@ -392,8 +392,8 @@ implementation:
                     }
                     package_name = package_map.get(module_name.split('.')[0], module_name.split('.')[0])
                     raise ImportError(
-                        f'\n{algorithm_name} requires additional package: {package_name}\n' +
-                        f'Install with: pip install {package_name}'
+                        (f'\n{algorithm_name} requires additional package: {package_name}\n'
+                         f'Install with: pip install {package_name}')
                     ) from e
                 raise
         
@@ -656,8 +656,8 @@ implementation:
                 if args.algorithm not in ALGORITHM_REGISTRY:
                     available = ', '.join(ALGORITHM_REGISTRY.keys())
                     raise ValueError(
-                        f'Unknown algorithm: {args.algorithm}\n' +
-                        f'Available: {available}'
+                        (f'Unknown algorithm: {args.algorithm}\n'
+                         f'Available: {available}')
                     )
                 
                 config = ALGORITHM_REGISTRY[args.algorithm]
