--- a/model_training.yaml
+++ b/model_training.yaml
@@ -361,13 +361,13 @@ implementation:
         
         
         def load_algorithm_class(algorithm_name):
-            # Dynamically load algorithm class
-            # Returns: tuple (AlgorithmClass, config_dict)
+            """Dynamically load algorithm class. Returns: tuple (AlgorithmClass, config_dict)"""
             if algorithm_name not in ALGORITHM_REGISTRY:
                 available = ', '.join(ALGORITHM_REGISTRY.keys())
-                msg = 'Unknown algorithm: ' + str(algorithm_name) + '\n'
-                msg += 'Available algorithms: ' + str(available)
-                raise ValueError(msg)
+                raise ValueError(
+                    f"Unknown algorithm: {algorithm_name}\n"
+                    f"Available algorithms: {available}"
+                )
             
             config = ALGORITHM_REGISTRY[algorithm_name]
             module_name = config['module']
@@ -375,11 +375,9 @@ implementation:
             
             try:
                 if config.get('is_function'):
-                    # Handle functional APIs (Fuzzy C-Means)
                     module = __import__(module_name, fromlist=[class_name])
                     return getattr(module, class_name), config
                 else:
-                    # Handle class-based APIs
                     module = __import__(module_name, fromlist=[class_name])
                     return getattr(module, class_name), config
             except ImportError as e:
@@ -390,28 +388,26 @@ implementation:
                         'skfuzzy': 'scikit-fuzzy'
                     }
                     package_name = package_map.get(module_name.split('.')[0], module_name.split('.')[0])
-                    msg = '\n' + algorithm_name + ' requires additional package: ' + package_name + '\n'
-                    msg += 'Install with: pip install ' + package_name
-                    raise ImportError(msg) from e
+                    raise ImportError(
+                        f"\n{algorithm_name} requires additional package: {package_name}\n"
+                        f"Install with: pip install {package_name}"
+                    ) from e
                 raise
         
         
         def auto_tune_parameters(algorithm_name, default_params, n_samples, n_features):
-            # Auto-tune parameters based on data characteristics
-            # Returns: dict with tuned parameters
+            """Auto-tune parameters based on data characteristics. Returns: dict with tuned parameters"""
             params = default_params.copy()
             
             print(f'\nAuto-tuning parameters for {algorithm_name}...')
             print(f'Data shape: {n_samples} samples x {n_features} features')
             
             if algorithm_name in ['KMeans', 'MiniBatchKMeans', 'BisectingKMeans', 'KMedoids']:
-                # Heuristic: sqrt(n_samples/2)
                 suggested_k = max(2, min(int(np.sqrt(n_samples / 2)), 50))
                 params['n_clusters'] = suggested_k
                 print(f'Auto-tuned n_clusters: {suggested_k}')
                 
             elif algorithm_name == 'DBSCAN':
-                # Heuristic: eps based on feature count
                 suggested_eps = max(0.3, min(2.0, n_features * 0.1))
                 suggested_min_samples = max(3, min(2 * n_features, 50))
                 params['eps'] = suggested_eps
@@ -420,13 +416,11 @@ implementation:
                 print(f'Auto-tuned min_samples: {suggested_min_samples}')
                 
             elif algorithm_name == 'HDBSCAN':
-                # Heuristic: min_cluster_size as 1% of data
                 suggested_size = max(5, int(n_samples * 0.01))
                 params['min_cluster_size'] = suggested_size
                 print(f'Auto-tuned min_cluster_size: {suggested_size}')
                 
             elif algorithm_name in ['GaussianMixture', 'BayesianGaussianMixture']:
-                # Heuristic: fewer components for high-dimensional data
                 if n_features > 20:
                     suggested_comp = max(2, min(5, int(np.sqrt(n_features))))
                 else:
@@ -456,31 +450,25 @@ implementation:
         
         
         def train_model(X_train, algorithm_name, parameters, training_mode='auto'):
-            # Train clustering model
-            # Returns: tuple (model, train_labels, config)
+            """Train clustering model. Returns: tuple (model, train_labels, config)"""
             print(f'\nTraining {algorithm_name}...')
             print(f'Data shape: {X_train.shape}')
             print(f'Training mode: {training_mode}')
             
-            # Load algorithm
             AlgorithmClass, config = load_algorithm_class(algorithm_name)
             
-            # Determine training mode
             if training_mode == 'auto':
                 training_mode = config['preferred_training']
                 print(f'Auto-selected mode: {training_mode}')
             
-            # Train based on mode
             if training_mode == 'fit':
                 print(f'Training with fit()...')
                 model = AlgorithmClass(**parameters)
                 model.fit(X_train)
                 
-                # Get labels
                 if config['has_labels']:
                     train_labels = model.labels_
                 else:
-                    # For GMM and similar (no labels_ attribute)
                     train_labels = model.predict(X_train)
             
             elif training_mode == 'fit_predict':
@@ -490,16 +478,12 @@ implementation:
             
             elif training_mode == 'function_call':
                 print(f'Training with functional API...')
-                # Handle Fuzzy C-Means
                 if algorithm_name == 'FuzzyCMeans':
                     import skfuzzy as fuzz
-                    # Fuzzy C-Means expects transposed data
                     cntr, u, u0, d, jm, p, fpc = fuzz.cluster.cmeans(
                         X_train.T, **parameters
                     )
-                    # Get hard labels (max membership)
                     train_labels = np.argmax(u, axis=0)
-                    # Store for inference
                     model = {
                         'centers': cntr,
                         'membership': u,
@@ -511,7 +495,6 @@ implementation:
             else:
                 raise ValueError(f'Unknown training_mode: {training_mode}')
             
-            # Analyze results
             unique_labels = np.unique(train_labels)
             n_clusters = len(unique_labels[unique_labels != -1])
             n_noise = np.sum(train_labels == -1)
@@ -534,28 +517,23 @@ implementation:
         
         def save_outputs(model, train_labels, X_train, config, parameters, algorithm_name, 
                         model_path, labels_path, train_data_path, metadata_path):
-            # Save model and training results
+            """Save model and training results"""
             print(f'\nSaving outputs...')
             
-            # Ensure directories exist
             for path in [model_path, labels_path, train_data_path, metadata_path]:
                 os.makedirs(os.path.dirname(path), exist_ok=True)
             
-            # Save model
             with open(model_path, 'wb') as f:
                 pickle.dump(model, f)
             model_size = os.path.getsize(model_path) / 1024
             print(f'Model saved: {model_path} ({model_size:.2f} KB)')
             
-            # Save training labels
             np.save(labels_path, train_labels)
             print(f'Labels saved: {labels_path}')
             
-            # Save training data reference (for inference)
             np.save(train_data_path, X_train)
             print(f'Train data saved: {train_data_path}')
             
-            # Create metadata
             unique_labels = np.unique(train_labels)
             n_clusters = len(unique_labels[unique_labels != -1])
             n_noise = int(np.sum(train_labels == -1))
@@ -583,7 +561,6 @@ implementation:
                 'training_complete': True
             }
             
-            # Save metadata
             with open(metadata_path, 'w') as f:
                 json.dump(metadata, f, indent=2)
             print(f'Metadata saved: {metadata_path}')
@@ -596,27 +573,15 @@ implementation:
                 description='Universal Clustering Model Training Component'
             )
             
-            # Input arguments
-            parser.add_argument('--train_data', required=True,
-                               help='Training data path')
-            parser.add_argument('--algorithm', required=True,
-                               help='Clustering algorithm name')
-            parser.add_argument('--params', default='{}',
-                               help='Algorithm parameters as JSON')
-            parser.add_argument('--auto_tune', default='false',
-                               help='Auto-tune parameters (true/false)')
-            parser.add_argument('--training_mode', default='auto',
-                               help='Training mode')
-            
-            # Output arguments
-            parser.add_argument('--output_model', required=True,
-                               help='Output path for trained model')
-            parser.add_argument('--output_train_labels', required=True,
-                               help='Output path for training labels')
-            parser.add_argument('--output_train_data_ref', required=True,
-                               help='Output path for training data reference')
-            parser.add_argument('--output_metadata', required=True,
-                               help='Output path for metadata')
+            parser.add_argument('--train_data', required=True, help='Training data path')
+            parser.add_argument('--algorithm', required=True, help='Clustering algorithm name')
+            parser.add_argument('--params', default='{}', help='Algorithm parameters as JSON')
+            parser.add_argument('--auto_tune', default='false', help='Auto-tune parameters (true/false)')
+            parser.add_argument('--training_mode', default='auto', help='Training mode')
+            parser.add_argument('--output_model', required=True, help='Output path for trained model')
+            parser.add_argument('--output_train_labels', required=True, help='Output path for training labels')
+            parser.add_argument('--output_train_data_ref', required=True, help='Output path for training data reference')
+            parser.add_argument('--output_metadata', required=True, help='Output path for metadata')
             
             args = parser.parse_args()
             
@@ -625,7 +590,6 @@ implementation:
                 print("UNIVERSAL CLUSTERING MODEL TRAINING")
                 print("="*80)
                 
-                # Load training data
                 print(f'\nLoading training data from: {args.train_data}')
                 
                 if args.train_data.endswith('.csv'):
@@ -639,7 +603,6 @@ implementation:
                 print(f'Loaded successfully')
                 print(f'Shape: {X_train.shape[0]} samples x {X_train.shape[1]} features')
                 
-                # Validate data
                 if X_train.shape[0] < 2:
                     raise ValueError(f'Need at least 2 samples, got {X_train.shape[0]}')
                 
@@ -650,26 +613,24 @@ implementation:
                     n_invalid = (~np.isfinite(X_train)).sum()
                     raise ValueError(f'Data contains {n_invalid} NaN/Inf values')
                 
-                # Get algorithm configuration
                 if args.algorithm not in ALGORITHM_REGISTRY:
                     available = ', '.join(ALGORITHM_REGISTRY.keys())
-                    msg = 'Unknown algorithm: ' + str(args.algorithm) + '\n'
-                    msg += 'Available: ' + str(available)
-                    raise ValueError(msg)
+                    raise ValueError(
+                        f"Unknown algorithm: {args.algorithm}\n"
+                        f"Available: {available}"
+                    )
                 
                 config = ALGORITHM_REGISTRY[args.algorithm]
                 
                 print(f'\nAlgorithm: {args.algorithm}')
-                print(f'Category: {config['category']}')
-                print(f'Training method: {config['preferred_training']}')
+                print(f'Category: {config["category"]}')
+                print(f'Training method: {config["preferred_training"]}')
                 
-                # Prepare parameters
                 parameters = config['default_params'].copy()
                 
                 print(f'\nConfiguring parameters...')
                 print(f'Starting with defaults for {args.algorithm}')
                 
-                # Auto-tune if requested
                 if args.auto_tune.lower() == 'true':
                     parameters = auto_tune_parameters(
                         args.algorithm,
@@ -678,7 +639,6 @@ implementation:
                         X_train.shape[1]
                     )
                 
-                # Apply user parameters
                 if args.params and args.params != '{}':
                     try:
                         user_params = json.loads(args.params)
@@ -697,7 +657,6 @@ implementation:
                 for key, value in parameters.items():
                     print(f'  {key}: {value}')
                 
-                # Train model
                 model, train_labels, config = train_model(
                     X_train=X_train,
                     algorithm_name=args.algorithm,
@@ -705,7 +664,6 @@ implementation:
                     training_mode=args.training_mode
                 )
                 
-                # Save outputs
                 metadata = save_outputs(
                     model=model,
                     train_labels=train_labels,
@@ -719,16 +677,15 @@ implementation:
                     metadata_path=args.output_metadata
                 )
                 
-                # Final summary
                 print(f'\n' + "="*80)
                 print("TRAINING COMPLETED SUCCESSFULLY")
                 print("="*80)
                 print(f'\nSummary:')
                 print(f'  Algorithm: {args.algorithm}')
-                print(f'  Category: {config['category']}')
+                print(f'  Category: {config["category"]}')
                 print(f'  Training samples: {X_train.shape[0]}')
                 print(f'  Features: {X_train.shape[1]}')
-                print(f'  Clusters found: {metadata['training_results']['n_clusters']}')
+                print(f'  Clusters found: {metadata["training_results"]["n_clusters"]}')
                 
                 if metadata['training_results']['n_noise'] > 0:
                     n_noise = metadata['training_results']['n_noise']
